other/check-serviceaccount-secrets/.chainsaw-test/bad-svc-account.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"ServiceAccount","metadata":{"annotations":{},"name":"example-automated-thing","namespace":"examplens"}}      
  name: bad-svc-account-02
  namespace: default
secrets:
  - name: example-automated-thing-token-zyxwv
