other/check-serviceaccount-secrets/.chainsaw-test/good-svc-account.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: good-svc-account
  namespace: default
